// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de GifExpertApp debe de mostrar <GifExpertApp /> correctamente 1`] = `
<Fragment>
  <div
    className="container"
  >
    <h1>
      GifExpertApp
    </h1>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
  </div>
</Fragment>
`;

exports[`Pruebas de GifExpertApp debe mostrar lista de categorias 1`] = `
<Fragment>
  <div
    className="container"
  >
    <h1>
      GifExpertApp
    </h1>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
    <GifGrid
      category="Rihanna"
      key="Rihanna"
    />
    <GifGrid
      category="Ariana"
      key="Ariana"
    />
  </div>
</Fragment>
`;
